Changelog
=========

Collage 1.2.0 trunk (unreleased)
--------------------------------

https://svn.plone.org/collective/Products.Collage/tags/

* Added translation entries for new boolean in Collage.
  [glenfant]

* Collage subcontents indexing is now an option, since a Collage
  object may be irrelevant in search results (i.e: a Collage with
  only File contents).
  [glenfant]

* Added utilities.getFSVersionTuple that may help Collage extension
  components (add skins, content type support, ...)
  [glenfant]

* version.txt is major.minor.bugfix-[beta] to get synch with
  metadata.xml/version (when upgrade step required) and complying
  getFSVersionTuple above
  [glenfant]

* Add missing event-related translation.
  [kdeldycke]

Collage 1.2.0 beta 3 (2008-08-15)
---------------------------------

https://svn.plone.org/collective/Products.Collage/tags/1.2b3

* Packaged as a python egg and released on pypi.
  [davisagli]

* Renamed builtin portlet skins and gave minimum CSS to them.
  [glenfant]

* Re-using ATContentTypes.content.schemata.ATContentTypesSchema and
  removing copied/pasted portions of code in our schema definitions.
  [glenfant]

* Removed CMF skins layer "Collage" and spreaded its stuffs in Zope 3
  style browser resources and pages (CSS). Added an upgrade step for
  this.
  [glenfant]

* Using the MessageFactory for labels and descriptions in
  schemas. Code is more compact and i18ndude friendly.
  [glenfant]

* Added unit tests for utilities.
  [glenfant]


Collage 1.2.0 beta 2
--------------------

https://svn.plone.org/collective/Collage/tags/1.2.0beta2

* Added a GenericSetup upgrade step to 1.2.0.
  [glenfant]

* Removed useless Folder and Plone Site types setups.
  [glenfant]

Collage 1.2.0 beta 1
--------------------

https://svn.plone.org/collective/Collage/tags/1.2.0beta1

* Added a skin demo for portlets
  [glenfant]

* Code cleanup with pyflakes
  [glenfant]

* Registering skin with ZCML
  [glenfant]
